--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" /> -->
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
   <link rel="apple-touch-icon" href="img/logo.png" />
   <!-- <link rel="apple-touch-icon" sizes="72x72" href="img/logo.png" /> -->
   <!-- <link rel="apple-touch-icon" sizes="114x114" href="img/logo.png" /> -->
-
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <link
     rel="stylesheet"
